got drop down for versions to work

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JWT Auth</title>
+  <title>The Ultimate ReadMe</title>
   <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
 </head>
 
