--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>The Ultimate ReadMe</title>
-  <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
+  <!-- <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
 </head>
-
 <body ng-app="JWT">
 
   <div ng-view></div>
 
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
+  <!-- <script src="node_modules/materialize-css/dist/js/materialize.min.js"></script> -->
   <script src="node_modules/angular/angular.min.js"></script>
   <script src="node_modules/angular-route/angular-route.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
 
   <script src="app/app.js"></script>
   <script src="app/controllers/homeCtrl.js"></script>
