complete for demo day

--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
   <title>The Ultimate ReadMe</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
+  <link rel="stylesheet"  href="styles/main.css">
+
 </head>
 
-<body ng-app="JWT" style="
-  background: url(../img/dev.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;">
+<body ng-app="JWT">
 
   <div ng-view></div>
 
